--- a/2ano/POO (Oriented Objects Programming)/.gitignore
+++ b/2ano/POO (Oriented Objects Programming)/.gitignore
@@ -4,7 +4,7 @@ fichas/task2/*.class
 fichas/task3/*.class
 fichas/task4/*.class
 fichas/task5/*.class
-fichas/task6/.idea/
-fichas/task6/projeto\ fitness/src/main/
+fichas/projeto_fitness/projeto_fitness.iml
 *.iml
+fichas/projeto_fitness/projeto_fitness.iml/.idea/
 .idea/
