--- a/3rd_year/ATS (Software Testing Analysis)/tasks/task1/part2/pom.xml
+++ b/3rd_year/ATS (Software Testing Analysis)/tasks/task1/part2/pom.xml
@@ -40,22 +40,27 @@
     <build>
         <plugins>
             <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.0</version>
-            <dependencies>
-                <dependency>
-                    <groupId>org.junit.platform</groupId>
-                    <artifactId>junit-platform-surefire-provider</artifactId>
-                    <version>1.2.0</version>
-                </dependency>
-            </dependencies>
-            <configuration>
-                <additionalClasspathElements>
-                    <additionalClasspathElement>src/test/java/</additionalClasspathElement>
-                </additionalClasspathElements>
-            </configuration>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>2.22.0</version>
+            	<dependencies>
+                	<dependency>
+                    	<groupId>org.junit.platform</groupId>
+                    	<artifactId>junit-platform-surefire-provider</artifactId>
+                    	<version>1.2.0</version>
+                	</dependency>
+            	</dependencies>
+            	<configuration>
+                	<additionalClasspathElements>
+                    	<additionalClasspathElement>src/test/java/</additionalClasspathElement>
+                	</additionalClasspathElements>
+            	</configuration>
             </plugin>
+	    <plugin>
+      		<groupId>org.pitest</groupId>
+      		<artifactId>pitest-maven</artifactId>
+      		<version>1.7.3</version>
+    	     </plugin>
         </plugins>
     </build>
     
